# ChangeLog for app-admin/sysstat
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-admin/sysstat/ChangeLog,v 1.60 2007/07/12 13:51:29 angelos Exp $

  12 Jul 2007; Christoph Mende <angelos@gentoo.org> sysstat-7.0.4-r2.ebuild:
  Stable on amd64

  12 Jul 2007; Raúl Porcel <armin76@gentoo.org> sysstat-7.0.4-r2.ebuild:
  alpha stable

  22 Jun 2007; Jeroen Roovers <jer@gentoo.org> sysstat-7.1.5.ebuild:
  Fix patching (bug #182807)

*sysstat-7.1.5 (21 Jun 2007)

  21 Jun 2007; Jeroen Roovers <jer@gentoo.org> +sysstat-7.1.5.ebuild:
  Version bump (bug #182756).

  12 Jun 2007; Jeroen Roovers <jer@gentoo.org>
  +files/sysstat-7.1.4-strip.patch, sysstat-7.1.4.ebuild:
  Fix NLS (bug #181737). Clean up.

*sysstat-7.1.4 (10 Jun 2007)

  10 Jun 2007; Jeroen Roovers <jer@gentoo.org> metadata.xml,
  +sysstat-7.1.4.ebuild:
  Made myself maintainer. Version bump.

  08 Jun 2007; Jeroen Roovers <jer@gentoo.org> sysstat-7.0.4-r2.ebuild:
  Do not install the cron.d file (bug #172548 comment #5).

*sysstat-7.0.4-r2 (31 May 2007)

  31 May 2007; Markus Ullmann <jokey@gentoo.org>
  -files/sysstat-6.0.0-gcc4.diff, -files/sysstat-6.0.1-gcc4.diff,
  +files/sysstat.init.d, -sysstat-5.0.2.ebuild, -sysstat-6.0.1.ebuild,
  -sysstat-7.0.1.ebuild, -sysstat-7.0.4-r1.ebuild, +sysstat-7.0.4-r2.ebuild:
  Cleanup and fix paths per bug #172548 thanks to Sergij Borodych

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> sysstat-7.0.4-r1.ebuild:
  Stable on ppc64

  01 Apr 2007; Michael Hanselmann <hansmi@gentoo.org>
  sysstat-7.0.4-r1.ebuild:
  Stable on ppc.

*sysstat-7.0.4-r1 (27 Mar 2007)

  27 Mar 2007; Markus Ullmann <jokey@gentoo.org> -sysstat-7.0.4.ebuild,
  +sysstat-7.0.4-r1.ebuild:
  Fix man dir, thanks to William Zhou for the patch in bug #171601

  23 Mar 2007; Jeroen Roovers <jer@gentoo.org> sysstat-7.0.4.ebuild:
  Stable for HPPA too.

  22 Mar 2007; Gustavo Zacarias <gustavoz@gentoo.org> sysstat-7.0.4.ebuild:
  Stable on sparc
