@@ -18,6 +18,7 @@ DIST sysstat-5.0.5.tar.gz 123127 RMD160 da38d374bcf4c5b92e8ba01f77d2e3336d76cb6f
 DIST sysstat-7.0.4.tar.gz 157567 RMD160 c8f483e0b02176fa50a97a6608118540723fc498 SHA1 9609a4e9320f1963beddf23fdeb293a29d48d743 SHA256 b42e0d5fac381c24d0484708b0f992b39e267b4fcde2889b7c0c5f991bad604f
 DIST sysstat-7.1.4.tar.gz 207503 RMD160 cabff4734a9f1be7fca6ef9842516a06a17f44df SHA1 47cdfbea01aba5c26f8e5c8849c7b4aa670b9b2e SHA256 38fd6a406c1884a8c02d5e4cd9cfd1c8e031e3107007a234ee0a14dd2059a1aa
 DIST sysstat-7.1.5.tar.gz 209172 RMD160 577066777c4d769dca9ceea5d00117c450f9d68d SHA1 d806301e9960577634a747fd0824a980f5cb66c3 SHA256 d94c43124e549816de2506ee3197770bdcd37496ff40f88dbd09bd2c138641f2
+DIST sysstat-7.1.6.tar.gz 207766 RMD160 89bde54d6af95520c05cc9fd44230cdbf5504a62 SHA1 01b52fa7c026ef449bbb769460c7799aa04b61f5 SHA256 5799e36243d34caf14dcc61c6aaec4e41b90c50fd3953be519d6daeee8b54ff6
 EBUILD sysstat-5.0.5-r2.ebuild 1224 RMD160 597e5e62de2b428ee91c394badeda7c6b59f3264 SHA1 0b0968b55592df963e22172171aa00965c5eb8f7 SHA256 839c32f0274f5c6e705e3b67d6ddbb41ae5c11c899dc269bd3d91b551c1a523c
 MD5 ab74060a41d92f41cc627695ed0d8c30 sysstat-5.0.5-r2.ebuild 1224
 RMD160 597e5e62de2b428ee91c394badeda7c6b59f3264 sysstat-5.0.5-r2.ebuild 1224
@@ -34,10 +35,14 @@ EBUILD sysstat-7.1.5.ebuild 1045 RMD160 b31c8e37b014a8f4fee45da4734fa11a156d2f9d
 MD5 8c1245984131160c362a1f4ba5c0f823 sysstat-7.1.5.ebuild 1045
 RMD160 b31c8e37b014a8f4fee45da4734fa11a156d2f9d sysstat-7.1.5.ebuild 1045
 SHA256 5f1918671a0df888e52cafbe47385e4332994b169f68bb1d79d5d0a3ace27aa1 sysstat-7.1.5.ebuild 1045
-MISC ChangeLog 8125 RMD160 427f2fba3013f9e419c0b22cd8498187a63e9171 SHA1 5722e1ce59b6fa590c470ac7cd08aa831a6f6803 SHA256 a11a948cf5464b40a67f350743a967206c4e1a7bb7907669a33799d9704ab228
-MD5 2cfaf743a23440ede5a313f3ef5802b2 ChangeLog 8125
-RMD160 427f2fba3013f9e419c0b22cd8498187a63e9171 ChangeLog 8125
-SHA256 a11a948cf5464b40a67f350743a967206c4e1a7bb7907669a33799d9704ab228 ChangeLog 8125
+EBUILD sysstat-7.1.6.ebuild 1045 RMD160 f946361919c7d651b3d2d9cbf109a632dadb394b SHA1 7ad36df5958b90b330039bf2713a5b774aafb309 SHA256 b624cca457c5632c8174d9899054b6d965a4650d1ccbe2ea546d1b25b0d6c13c
+MD5 d8f93b0a8b7c6246d22862634dc5dc7d sysstat-7.1.6.ebuild 1045
+RMD160 f946361919c7d651b3d2d9cbf109a632dadb394b sysstat-7.1.6.ebuild 1045
+SHA256 b624cca457c5632c8174d9899054b6d965a4650d1ccbe2ea546d1b25b0d6c13c sysstat-7.1.6.ebuild 1045
+MISC ChangeLog 8238 RMD160 4909a759653aa3cc4bcc63b44b225153cb283dc7 SHA1 529f85af89052ba0d00dfb4c0dffd98553fffef0 SHA256 87bff66f7cdbdf7f4d443cf7a099edab7a4d713cbdc6616792fff634b2b24757
+MD5 c9221dfb724a68e9a728b539b1efe93a ChangeLog 8238
+RMD160 4909a759653aa3cc4bcc63b44b225153cb283dc7 ChangeLog 8238
+SHA256 87bff66f7cdbdf7f4d443cf7a099edab7a4d713cbdc6616792fff634b2b24757 ChangeLog 8238
 MISC metadata.xml 252 RMD160 ed7e3d6637ec96975f17ce5c33628aa482dfd663 SHA1 ddd00321e20f4a53a140eeb56cb01b9fab24d657 SHA256 76fd24f00e95b2892ca60acdce02d8c85dfeff84fc89ca14ffdbc00b82de44b3
 MD5 fbe6e8a03b222b84e9afcf23787c30dc metadata.xml 252
 RMD160 ed7e3d6637ec96975f17ce5c33628aa482dfd663 metadata.xml 252
@@ -54,3 +59,6 @@ SHA256 8f949e197d40b8c2bf518149bf886f46ac8a5cd509772a82c5f4d0ea63209a38 files/di
 MD5 5662fbd9a77642c17c33fc760ce22499 files/digest-sysstat-7.1.5 241
 RMD160 874762fd8b1f0ba7f7d9033b7f7718dffed53522 files/digest-sysstat-7.1.5 241
 SHA256 94103482be3bf7425aa44ed73bce4c382cbb637fed3634e48db48ecc408a039c files/digest-sysstat-7.1.5 241
+MD5 26b98a7514558979a6a3be7969cba1da files/digest-sysstat-7.1.6 241
+RMD160 660a4d15f0d2718164dbc1fe7d27952ac9677339 files/digest-sysstat-7.1.6 241
+SHA256 f451e805eecbd778c0c1f61721741c65177b292ed0be07cfe1131819da19a152 files/digest-sysstat-7.1.6 241
