@@ -1,0 +1,3 @@
+MD5 72ace90067412b58aa3e397690409dfb sysstat-7.1.6.tar.gz 207766
+RMD160 89bde54d6af95520c05cc9fd44230cdbf5504a62 sysstat-7.1.6.tar.gz 207766
+SHA256 5799e36243d34caf14dcc61c6aaec4e41b90c50fd3953be519d6daeee8b54ff6 sysstat-7.1.6.tar.gz 207766
